objects/ssot__SalesOrderProductTax__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Sales Order Product Tax Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalSalesOrderProductTaxId__c</fullName>
        <label>Original Sales Order Product Tax Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductId__c</fullName>
        <label>Sales Order Product</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderTaxType__c</fullName>
        <label>Sales Order Tax Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxAmount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TaxEffectiveDate__c</fullName>
        <label>Tax Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TaxId__c</fullName>
        <label>Tax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761218217_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderProductTax_OriginalSalesOr_rel</label>
        <referenceTo>ssot__SalesOrderProductTax__dlm</referenceTo>
        <relationshipLabel>SalesOrderProductTax_OriginalSalesOr_rel</relationshipLabel>
        <relationshipName>rel_1697761218217_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761218642_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderProductTax_SalesOrderProdu_rel</label>
        <referenceTo>ssot__SalesOrderProduct__dlm</referenceTo>
        <relationshipLabel>SalesOrderProductTax_SalesOrderProdu_rel</relationshipLabel>
        <relationshipName>rel_1697761218642_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761219126_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderProductTax_TaxId_map_Tax_I_rel</label>
        <referenceTo>ssot__Tax__dlm</referenceTo>
        <relationshipLabel>SalesOrderProductTax_TaxId_map_Tax_I_rel</relationshipLabel>
        <relationshipName>rel_1697761219126_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>